correct file extension.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <img src="assets/sftk_general.png" alt="SFTK General">
     </div>		
     <div>
-        <img src="assets/sftk_sponsors.jpg" alt="SFTK Sponsors">
+        <img src="assets/sftk_sponsors.png" alt="SFTK Sponsors">
     </div>	
 </body>
 </html>
